--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-img {
-    max-width: 5%;
-    height: auto;
-    margin-left: 250;
-  }
 .container {
     display: flex;
     flex-direction: column;
@@ -26,41 +21,33 @@ input {
     background-color: #DCE1EB;
     border: 0;
     padding: 15px;
+    border-radius: 8px;
     font-size: 20px;
     text-align: center;
     font-family: "Open Sans", sans-serif;
-    height: 50px;
+    height: 100px;
     width: 1000px;
-    border-top: 10px;
-    margin-left: 275px;
-    padding-bottom: 0px;
+    display: block;
+    margin: auto;
 }
 
-.post {
+button {
     color: #FDFDFD;
-    background-color: Red;
+    background-color: #AC485A;
     border: 0;
+    padding: 15px;
+    border-radius: 8px;
     font-size: 20px;
     text-align: center;
     font-family: "Open Sans", sans-serif;
     width: 1000px;
-    margin-top: 10px;
-    margin-left: 275;
-
-}
-
-.image {
-    width: 300px;
+    display: block;
+    margin: auto;   
     height: 50px;
-    float: left;
+    margin-top: 10px;
+
 }
-
-.submit {
-    height:50px;
- }
-
 ul {
-    max-width: 1000;
     overflow-y: scroll;
     list-style-type: none;
     font-family: "Open Sans", sans-serif;
@@ -68,8 +55,8 @@ ul {
     font-weight: 1000;
     font-style: normal;
     padding-top: 25px;
-    margin-left: 250px;
-   
+    font-variation-settings:
+      "wdth" 100;
 }
 
 /* unvisited link */
@@ -108,4 +95,4 @@ a:link {
     bottom: 0;
     width: 60%;
 }
-  
+
